Fix broken links

--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -5,7 +5,7 @@ description: What is Apollo Client and what does it do?
 
 ## Write queries, not code
 
-[Apollo](https://www.nasa.gov/mission_pages/apollo/missions/index.html) Client is the ultra-flexible, community driven GraphQL client for Angular, JavaScript, and native platforms. It is designed from the ground up to make it easy to build UI components that fetch data with GraphQL. To get the most value out of Apollo Client, you should use it with one of its view layer integrations. To get started with the Angular integration, go to [setup](./basics/setup.html).
+[Apollo](https://www.nasa.gov/mission_pages/apollo/missions/index.html) Client is the ultra-flexible, community driven GraphQL client for Angular, JavaScript, and native platforms. It is designed from the ground up to make it easy to build UI components that fetch data with GraphQL. To get the most value out of Apollo Client, you should use it with one of its view layer integrations. To get started with the Angular integration, go to [setup][].
 
 Apollo Client also has view layer integrations for [all the popular frontend frameworks](https://www.apollographql.com/client). For the best experience, make sure to use the view integration layer for your frontend framework of choice.
 
@@ -29,7 +29,9 @@ The docs are divided into three distinct sections to make it easy to find your w
 1. **Features**, which showcase some of the advanced capabilities of Apollo Client that your app may need.
 1. **Recipes**, to isolate and explain how to do common patterns.
 
-Getting started is as simple as installing a few libraries from [npm](https://npmjs.org)! The [setup](./basics/setup.html) is a good place to start your adventure with Apollo!
+Getting started is as simple as installing a few libraries from [npm](https://npmjs.org)! The [setup][] is a good place to start your adventure with Apollo!
+
+[setup]: /basics/setup/
 
 ### Compatible tools
 
@@ -41,7 +43,7 @@ Apollo is lovingly designed to work nicely with all of the tools used by today's
 
 - **Angular Schematics**: Apollo Angular supports `ng-add` and `ng-update` (migrations soon)
 - **NativeScript**: Apollo works out of the box in NativeScript.
-- **Angular Router**: Apollo Client is completely router-independent, which means you can use it with any version of [Angular Router](https://github.com/angular/angular) or any other routing library for Angular. It's even easy to set up [server-side rendering](./recipes/server-side-rendering.html).
+- **Angular Router**: Apollo Client is completely router-independent, which means you can use it with any version of [Angular Router](https://github.com/angular/angular) or any other routing library for Angular. It's even easy to set up [server-side rendering](/recipes/server-side-rendering/).
 - **Ionic**: Apollo works great with [Ionic Framework](http://ionicframework.com/) apps written in Angular
 
 If you have a favorite Angular tool, and something in Apollo makes it difficult to integrate, please open an issue and let's work together to make it work nicely and add it to the list!
@@ -55,11 +57,11 @@ We believe that using GraphQL should be easy and fun. One of the ways Apollo is 
 This documentation site is written with examples using Angular, but Apollo has an implementation for every client platform:
 
 - JavaScript
-  - [React](/docs/react)
+  - [React](https://www.apollographql.com/docs/react/)
   - [Vue](https://github.com/Akryum/vue-apollo)
-  - [Meteor](./recipes/meteor.html)
+  - [Meteor](/recipes/meteor/)
   - [Ember](https://github.com/bgentry/ember-apollo-client)
   - [Polymer](https://github.com/aruntk/polymer-apollo)
 - Native mobile
-  - [Native iOS with Swift](/docs/ios)
+  - [Native iOS with Swift](https://www.apollographql.com/docs/ios/)
   - [Native Android with Java](https://github.com/apollographql/apollo-android)
