Fix broken links to setup

--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -5,7 +5,7 @@ description: What is Apollo Client and what does it do?
 
 ## Write queries, not code
 
-[Apollo](https://www.nasa.gov/mission_pages/apollo/missions/index.html) Client is the ultra-flexible, community driven GraphQL client for Angular, JavaScript, and native platforms. It is designed from the ground up to make it easy to build UI components that fetch data with GraphQL. To get the most value out of Apollo Client, you should use it with one of its view layer integrations. To get started with the Angular integration, go to [setup][].
+[Apollo](https://www.nasa.gov/mission_pages/apollo/missions/index.html) Client is the ultra-flexible, community driven GraphQL client for Angular, JavaScript, and native platforms. It is designed from the ground up to make it easy to build UI components that fetch data with GraphQL. To get the most value out of Apollo Client, you should use it with one of its view layer integrations. To get started with the Angular integration, go to [setup](https://www.apollographql.com/docs/angular/basics/setup/).
 
 Apollo Client also has view layer integrations for [all the popular frontend frameworks](https://www.apollographql.com/client). For the best experience, make sure to use the view integration layer for your frontend framework of choice.
 
@@ -31,7 +31,7 @@ The docs are divided into three distinct sections to make it easy to find your w
 
 Getting started is as simple as installing a few libraries from [npm](https://npmjs.org)! The [setup][] is a good place to start your adventure with Apollo!
 
-[setup]: /basics/setup/
+[setup](https://www.apollographql.com/docs/angular/basics/setup/)
 
 ### Compatible tools
 
