Fix various minor typos

--- a/website/src/pages/docs/data/fragments.mdx
+++ b/website/src/pages/docs/data/fragments.mdx
@@ -74,7 +74,7 @@ export const COMMENT_QUERY = gql`
 `
 ```
 
-## Colocating Fragments
+## Collocating Fragments
 
 A key advantage of GraphQL is the tree-like nature of the response data, which in many cases mirrors your rendered component hierarchy. This, combined with GraphQL's support for fragments, allows you to split your queries up in such a way that the various fields fetched by the queries are located right alongside the code that uses the field.
 
