--- a/website/src/pages/v1/migration.mdx
+++ b/website/src/pages/v1/migration.mdx
@@ -148,7 +148,7 @@ By using `HttpClient` in `HttpLink` and thanks to DI, the HttpLink does not care
 
 ### Custom Configuration
 
-Since everything was baked into the 1.0, custom configuration of the parts, like the network interface or cache, all were done on the constructor. With the 2.0, this is broken up slightly, and uneccessary configurations were removed. The following code snippet shows every possible option with the previous version and how to use it with the 2.0:
+Since everything was baked into the 1.0, custom configuration of the parts, like the network interface or cache, all were done on the constructor. With the 2.0, this is broken up slightly, and unnecessary configurations were removed. The following code snippet shows every possible option with the previous version and how to use it with the 2.0:
 
 **Before**
 
