--- a/website/src/pages/v2/performance/server-side-rendering.mdx
+++ b/website/src/pages/v2/performance/server-side-rendering.mdx
@@ -137,7 +137,7 @@ class AppModule {}
 Adding store rehydration to your app is straightforward since Angular itself has a mechanism to transfer data from server to client.
 
 On `server` we extract data from cache when TransferState says it is ready to save and serialize data.
-On `browser` we do opposite thing, we receive transfered data to restore cache.
+On `browser` we do opposite thing, we receive transferred data to restore cache.
 
 Super easy and clean!
 
