Website: update next config file
Signed-off-by: Tuval Simha <tuval.simha@gmail.com>

--- a/website/src/pages/docs/data/mutations.mdx
+++ b/website/src/pages/docs/data/mutations.mdx
@@ -260,7 +260,7 @@ import { InMemoryCache } from '@apollo/client/core'
 export class AppModule {}
 ```
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning" >
   `useMutationLoading` is disabled to avoid any breaking changes, this may be enabled in next major version.
 </Callout>
 
