--- a/website/src/pages/docs/data/queries.mdx
+++ b/website/src/pages/docs/data/queries.mdx
@@ -163,7 +163,7 @@ In Angular, the simplest way of displaying data that comes from Observable is to
 put `AsyncPipe` on top of the property inside the UI. You can also achieve this
 with Apollo.
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning" >
   **Note**: Using async pipe more than once in your template will trigger the query for each pipe. To avoid this
   situation, subscribe to the data in the component, and display the data from the component's property.
 </Callout>
