--- a/website/src/pages/docs/recipes/authentication.mdx
+++ b/website/src/pages/docs/recipes/authentication.mdx
@@ -38,7 +38,7 @@ class AppModule {
 
 `withCredentials` is simply passed to the [`HttpClient`](https://angular.io/api/common/http/HttpClient) used by the `HttpLink` when sending the query.
 
-<Callout type='warning' emoji='⚠️'>
+<Callout type='warning'>
 **Note**: the backend must also allow credentials from the requested origin. e.g. if using the popular `cors` package from NPM in Node.js.
 </Callout>
 
