--- a/website/src/pages/docs/recipes/multiple-clients.mdx
+++ b/website/src/pages/docs/recipes/multiple-clients.mdx
@@ -31,7 +31,7 @@ apollo.create(extraOptions, 'extra')
 
 Now you have the default client and one called `extra`.
 
-<Callout type='warning' emoji='⚠️'>
+<Callout type='warning'>
 If you want to define a default client, simply do not use any `name` argument or set it to `default`.
 </Callout>
 
