--- a/website/src/pages/v1/basics/local-state.mdx
+++ b/website/src/pages/v1/basics/local-state.mdx
@@ -14,7 +14,7 @@ In this section, you'll learn how Apollo Client can help simplify local state ma
 
 Please note that this documentation is intended to be used to familiarize yourself with Apollo Client's local state management capabilities, and serve as a reference guide. If you're looking for a step-by-step tutorial outlining how to handle local state with Apollo Client (and leverage other Apollo components to build a fullstack application), please refer to the [Apollo tutorial](https://www.apollographql.com/docs/tutorial/introduction/).
 
-<Callout type='warning' emoji='⚠️'>
+<Callout type='warning'>
 If you're interested in integrating local state handling capabilities with Apollo Client \< 2.5, please refer to our (now deprecated) [`apollo-link-state`](https://github.com/apollographql/apollo-link-state) project. As of Apollo Client 2.5, local state handling is baked into the core, which means it is no longer necessary to use `apollo-link-state`. For help migrating from `apollo-link-state` to Apollo Client 2.5, please refer to the [Migrating from `apollo-link-state`](#migrating-from-apollo-link-state) section.
 </Callout>
 
