--- a/website/src/pages/v2/migration.mdx
+++ b/website/src/pages/v2/migration.mdx
@@ -21,7 +21,7 @@ Apollo Angular comes with set of migration schematics:
 
     ng update apollo-angular
 
-<Callout type="warning" emoji='⚠️'>
+<Callout type="warning">
 Important! Migration doesn't cover all use-cases and NgModules like `ApolloModule` or `HttpLinkModule` have to be deleted manually. To improve the migration script, please open issues and PRs!
 </Callout>
 
