--- a/website/src/pages/docs/caching/garbage-collection.mdx
+++ b/website/src/pages/docs/caching/garbage-collection.mdx
@@ -4,7 +4,7 @@ import { Callout } from '@theguild/components'
 
 Apollo Client 3 enables you to selectively remove cached data that is no longer useful. The default garbage collection strategy of the `gc` method is suitable for most applications, but the `evict` method provides more fine-grained control for applications that require it.
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning" >
   You call these methods directly on the `InMemoryCache` object, not on the `ApolloClient` object.
 </Callout>
 
