Fix broken links - Error 404
Signed-off-by: Tuval Simha <tuval.simha@gmail.com>

--- a/website/src/pages/v1/index.mdx
+++ b/website/src/pages/v1/index.mdx
@@ -6,7 +6,7 @@ description: What is Apollo Client and what does it do?
 
 ## Write Queries, Not Code
 
-[Apollo Client](https://nasa.gov/mission_pages/apollo/missions/index.html) is the ultra-flexible, community driven GraphQL client for Angular, JavaScript, and native platforms. It is designed from the ground up to make it easy to build UI components that fetch data with GraphQL. To get the most value out of Apollo Client, you should use it with one of its view layer integrations. To get started with the Angular integration, go to [setup](./basics/setup).
+[Apollo Client](https://nasa.gov/mission_pages/apollo/missions/index.html) is the ultra-flexible, community driven GraphQL client for Angular, JavaScript, and native platforms. It is designed from the ground up to make it easy to build UI components that fetch data with GraphQL. To get the most value out of Apollo Client, you should use it with one of its view layer integrations. To get started with the Angular integration, go to [setup](./v1/basics/setup).
 
 Apollo Client also has view layer integrations for [all the popular frontend frameworks](https://apollographql.com/client). For the best experience, make sure to use the view integration layer for your frontend framework of choice.
 
